# CourseWatcher

./: Cargo.toml  README.md
src/: main.rs  parser.rs  scraper.rs  vsb.rs
src/db/: mod.rs  schema.sql
src/discord/: listener.rs  mod.rs
src/minerva/: mod.rs  parser.rs
