[package]
name = "coursewatcher"
version = "0.3.0"
edition = "2024"
license = "AGPL-3"

[dependencies]
## Scraper side
log = "0.4"
thiserror = "2.0"
scraper = "0.23"
reqwest  = { version = "0.12", features = ["rustls-tls", "cookies", "http2", "system-proxy","blocking"], default-features = false }
roxmltree = "0.20"
anyhow = "1.0"

## Database and entrypoint
chrono = { version = "0.4" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
env_logger = "0.11"

## For discord bot side
tokio = { version = "1.45", features = ["rt-multi-thread"] }
async-trait = "0.1"
serenity = "0.12"
